--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,58 @@
 .App {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.app-container {
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.app-footer {
+  padding: 1rem 0;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.App button {
+  background-color: rgba(150,120,250, 1);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  border: 0;
+  cursor: pointer;
+}
+
+.App button:hover {
+  background-color: rgb(63, 39, 143);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  border: 0;
+}
+
+.App th {
+  background-color: rgba(150,120,250, 1);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App tr {
+  color: black; 
+  background-color: rgba(150,150,150,0.1); 
+  padding: 0.25rem; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.screenshot-element {
+  width: 100%;
 }
